--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -202,6 +202,47 @@
     z-index: 1;
   }
 }
+/* Drag and Drop audio code */
+.upload-card {
+  padding: 10px;
+  box-shadow: 0 0 5px #ffdfdf;
+  border-radius: 5px;
+  overflow: hidden;
+}
+
+.upload-card .top{
+  text-align: center;
+}
+
+.upload-card p {
+  font-weight: bold;
+  color: #0086fe;
+}
+
+.upload-card button {
+  outline: 0;
+  border: 0;
+  color: #fff;
+  border-radius: 4px;
+  cursor: pointer;
+  font-weight: 400;
+  padding: 8px 13px;
+  width: 100%;
+  background: #0086fe;
+}
+
+.upload-card .drag-area {
+  height: 150px;
+  border-radius: 5px;
+  border: 2px dashed #0086fe;
+  color: #0086fe;
+  background: #f4f3f9;
+  display: flex;
+  align-items: center;
+  user-select: none;
+  margin-top: 10px;
+
+}
 
 /* Tablet and Smaller Desktop */
 @media (min-width: 701px) and (max-width: 1120px) {
